// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsTile Snapshot Tests > Complex Scenarios > should render with many tags 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <div
                class=w-full h-full flex flex-wrap min-w-[85px]
              >
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  env:production
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  team:frontend
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  version:1.0.0
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  region:eu-west-1
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  owner:john-doe
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  project:my-project
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  cost_center:engineering
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  department:IT
                </span>
              </div>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Manager les tags
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`TagsTile Snapshot Tests > Complex Scenarios > should render with single tag 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <div
                class=w-full h-full flex flex-wrap min-w-[85px]
              >
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  environment:staging
                </span>
              </div>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Manager les tags
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`TagsTile Snapshot Tests > Empty State > should render empty tags tile 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <span>
                Aucun tag n'est associé
              </span>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Ajouter un tag
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`TagsTile Snapshot Tests > Empty State > should render with empty tags 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <span>
                Aucun tag n'est associé
              </span>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Ajouter un tag
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`TagsTile Snapshot Tests > Empty State > should render without onEditTags callback 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <span>
                Aucun tag n'est associé
              </span>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Ajouter un tag
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`TagsTile Snapshot Tests > With Tags > should render tags tile with tags 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <div
                class=w-full h-full flex flex-wrap min-w-[85px]
              >
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  environment:production
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  team:frontend
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  version:1.0.0
                </span>
              </div>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Manager les tags
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`TagsTile Snapshot Tests > With Tags > should render with custom lineNumber 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <div
                class=w-full h-full flex flex-wrap min-w-[85px]
              >
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  environment:production
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  team:frontend
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  version:1.0.0
                </span>
              </div>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Manager les tags
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;

exports[`TagsTile Snapshot Tests > With Tags > should render with displayInternalTags enabled 1`] = `
<div>
  <div
    class=_card _card--neutral w-full flex-col p-[1rem]
    data-ods=card
  >
    <section
      class=flex flex-col w-full
    >
      <h4
        class=_text _text--heading-4
        data-ods=text
      >
        Tags
      </h4>
      <hr
        class=_divider _divider--24 w-full
        data-ods=divider
      />
      <dl
        class=flex flex-col m-0
      >
        <div
          class=flex flex-col gap-1
        >
          <dt
            class=flex justify-between
          >
            <div
              class=flex items-center gap-1 text-[var(--ods-color-text)]
            >
              <span
                class=_text _text--span font-bold
                data-ods=text
              >
                Tags assignés
              </span>
            </div>
          </dt>
          <dd
            class=m-0
          >
            <div
              class=w-full min-w-[85px] h-[120px] overflow-auto
            >
              <div
                class=w-full h-full flex flex-wrap min-w-[85px]
              >
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  environment:production
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  team:frontend
                </span>
                <span
                  class=_badge _badge--neutral _badge--md mr-1 mb-1 truncate inline-block
                  data-ods=badge
                  style=max-width: -32px;
                >
                  version:1.0.0
                </span>
              </div>
            </div>
            <a
              class=_link mt-4
              data-ods=link
              href=#
            >
              Manager les tags
              <span
                aria-hidden=true
                class=_icon _icon--external-link
                data-ods=icon
                role=presentation
              />
            </a>
            <hr
              class=_divider _divider--24
              data-ods=divider
            />
          </dd>
        </div>
      </dl>
    </section>
  </div>
</div>
`;
